ローディング画面変更

--- a/styles/loader.scss
+++ b/styles/loader.scss
@@ -1,14 +1,34 @@
 @import 'modules/variables';
 @import 'modules/mixin';
  
+#loading-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: $cWineRed;
+  opacity: 1;
+  z-index: 20;
+}
 #global-container {
   opacity: 0;
+  position: relative;
+
 }
 
-.pace-done #global-container {
-  opacity: 1;
-  transition: opacity 1000ms;
-}
+.pace-done {
+  & #global-container {
+    opacity: 1;
+    transition: opacity 1000ms;
+  }
+  & #loading-bg{
+    background-color: transparent !important;
+    transition: background-color 1000ms;
+    z-index: -1000;
+  }
+
+} 
 
 .pace {
   -webkit-pointer-events: none;
@@ -52,9 +72,9 @@
   content: attr(data-progress-text);
   display: block;
   font-weight: 100;
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: "Helvetica Neue", "Yu Gothic", "Meiryo", sans-serif; //複数記述することで適応の優先順位を決めることができる
-  color: $cSubTitle;
+  color: $cWhite;
 }
 
 // .pace .pace-activity {
@@ -71,9 +91,9 @@
 }
 
 .pace-progress-inner {
-  width: 40px;
-  height: 40px;
-  background-color: $cWineRed;
+  width: 60px;
+  height: 60px;
+  background-color: $cWhite;
   margin: 0 auto;
   @include animation(
     $name: sk-rotateplane,
