--- a/styles/loader.css
+++ b/styles/loader.css
@@ -1,11 +1,30 @@
+#loading-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #904669;
+  opacity: 1;
+  z-index: 20;
+}
+
 #global-container {
   opacity: 0;
+  position: relative;
 }
 
 .pace-done #global-container {
   opacity: 1;
   -webkit-transition: opacity 1000ms;
   transition: opacity 1000ms;
+}
+
+.pace-done #loading-bg {
+  background-color: transparent !important;
+  -webkit-transition: background-color 1000ms;
+  transition: background-color 1000ms;
+  z-index: -1000;
 }
 
 .pace {
@@ -42,9 +61,9 @@
   content: attr(data-progress-text);
   display: block;
   font-weight: 100;
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: "Helvetica Neue", "Yu Gothic", "Meiryo", sans-serif;
-  color: #535353;
+  color: white;
 }
 
 .pace.pace-inactive {
@@ -52,9 +71,9 @@
 }
 
 .pace-progress-inner {
-  width: 40px;
-  height: 40px;
-  background-color: #904669;
+  width: 60px;
+  height: 60px;
+  background-color: white;
   margin: 0 auto;
   -webkit-animation-name: sk-rotateplane;
           animation-name: sk-rotateplane;
